add esp code for mid-poit review

--- a/ESP-LIDAR/data/index.html
+++ b/ESP-LIDAR/data/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
 	<h1>Motor Control</h1>
+	<div id="warningMessage" class="warning-message">
+        Warning: Obstacle detected! Distance less than 10cm
+    </div>
 	<div class="container">	<!-- This is a box that holds the buttons. -->
 		<button class="button" onclick="forwards5()">FORWARDS<br>5cm</button> <!-- The onclick="forwards5()" tells the page to run the forwards5() function in the JavaScript when the button is clicked -->
 		<button class="button" onclick="forwards20()">FORWARDS<br>20cm</button>
